k8s/apps/paperless/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless
    spec:
      enableServiceLinks: false
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role/worker
                    operator: In
                    values: ["true"]
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
          ports:
            - containerPort: &port 8000
              name: http
          volumeMounts:
            - name: paperless-data
              mountPath: /usr/src/paperless/data
            - name: paperless-media
              mountPath: /usr/src/paperless/media
            - name: paperless-consume
              mountPath: /usr/src/paperless/consume
            - name: paperless-export
              mountPath: /usr/src/paperless/export
          resources:
            requests:
              cpu: 300m
              memory: 768Mi
            limits:
              cpu: "2"
              memory: 4Gi
          livenessProbe:
            httpGet:
              path: /
              port: *port
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: *port
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: paperless-media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: paperless-consume
          persistentVolumeClaim:
            claimName: paperless-consume
        - name: paperless-export
          persistentVolumeClaim:
            claimName: paperless-export
