k8s/apps/paperless/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  ports:
    - port: 8000
      name: http
  selector:
    app: paperless
  type: ClusterIP
