k8s/apps/paperless/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &domain paperless.${CLUSTER_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - *domain
      secretName: paperless-tls
  rules:
    - host: *domain
      http:
        paths:
          - backend:
              service:
                name: paperless
                port:
                  number: 8000
            path: /
            pathType: Prefix
